--- a/DNC-DShop/k8s/kubernetes-manifest.yaml
+++ b/DNC-DShop/k8s/kubernetes-manifest.yaml
@@ -44,7 +44,7 @@ spec:
       - name: rabbitmq
         image: rabbitmq:3-management
         volumeMounts:
-        - mountPath: /data
+        - mountPath: /var/lib/rabbitmq
           name: rabbitmq-data
         ports:
         - containerPort: 5672
@@ -111,7 +111,7 @@ spec:
       - name: mongo
         image: mongo:4
         volumeMounts:
-        - mountPath: /data
+        - mountPath: /data/db
           name: mongo-data		
         ports:
         - containerPort: 27017
@@ -521,7 +521,7 @@ spec:
       - name: grafana
         image: grafana/grafana
         volumeMounts:
-        - mountPath: /data
+        - mountPath: /var/lib/grafana
           name: grafana-data		
         ports:
         - containerPort: 3000
