--- a/DNC-DShop/k8s/kubernetes-manifest.yaml
+++ b/DNC-DShop/k8s/kubernetes-manifest.yaml
@@ -1261,35 +1261,35 @@ spec:
 
 ## LOAD BALANCERS
 
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: apiservice-external
-#  namespace: dshop
-#spec:
-#  type: LoadBalancer
-#  selector:
-#    app: apiservice
-#  ports:
-#  - name: http
-#    port: 5000
-#    targetPort: 5000
-#---
+apiVersion: v1
+kind: Service
+metadata:
+  name: apiservice-external
+  namespace: dshop
+spec:
+  type: LoadBalancer
+  selector:
+    app: apiservice
+  ports:
+  - name: http
+    port: 5000
+    targetPort: 5000
+---
 
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: identityservice-external
-#  namespace: dshop
-#spec:
-#  type: LoadBalancer
-#  selector:
-#    app: identityservice
-#  ports:
-#  - name: http
-#    port: 5002
-#    targetPort: 5000
-#---
+apiVersion: v1
+kind: Service
+metadata:
+  name: identityservice-external
+  namespace: dshop
+spec:
+  type: LoadBalancer
+  selector:
+    app: identityservice
+  ports:
+  - name: http
+    port: 5002
+    targetPort: 5000
+---
 
 ## INGRESS (using the helm deployed nginx-ingress chart)
 
@@ -1304,25 +1304,26 @@ spec:
 
 # deploy the ingress resource
 # This works but I am not an nginx guy so not sure why, need to figure this out at some point
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: dshop-ingress
-  namespace: dshop
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /api(/|$)(.*)
-        backend:
-          serviceName: apiservice
-          servicePort: 5000
-      - path: /identity(/|$)(.*)
-        backend:
-          serviceName: identityservice
-          servicePort: 5002
----
+
+#apiVersion: extensions/v1beta1
+#kind: Ingress
+#metadata:
+#  name: dshop-ingress
+#  namespace: dshop
+#  annotations:
+#    kubernetes.io/ingress.class: nginx
+#    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
+#    nginx.ingress.kubernetes.io/rewrite-target: /$2
+#spec:
+#  rules:
+#  - http:
+#      paths:
+#      - path: /api(/|$)(.*)
+#        backend:
+#          serviceName: apiservice
+#          servicePort: 5000
+#      - path: /identity(/|$)(.*)
+#        backend:
+#          serviceName: identityservice
+#          servicePort: 5002
+#---
