--- a/DNC-DShop/k8s/kubernetes-manifest.yaml
+++ b/DNC-DShop/k8s/kubernetes-manifest.yaml
@@ -664,7 +664,7 @@ spec:
       containers:
       - name: apiservice
         image: michaelgroenewald/k8s.dshop.api:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -742,7 +742,7 @@ spec:
       containers:
       - name: customerservice
         image: michaelgroenewald/k8s.dshop.services.customers:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -820,7 +820,7 @@ spec:
       containers:
       - name: identityservice
         image: michaelgroenewald/k8s.dshop.services.identity:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -898,7 +898,7 @@ spec:
       containers:
       - name: notificationservice
         image: michaelgroenewald/k8s.dshop.services.notifications:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -976,7 +976,7 @@ spec:
       containers:
       - name: operationservice
         image: michaelgroenewald/k8s.dshop.services.operations:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -1054,7 +1054,7 @@ spec:
       containers:
       - name: orderservice
         image: michaelgroenewald/k8s.dshop.services.orders:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -1132,7 +1132,7 @@ spec:
       containers:
       - name: productservice
         image: michaelgroenewald/k8s.dshop.services.products:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -1210,7 +1210,7 @@ spec:
       containers:
       - name: signalrservice
         image: michaelgroenewald/k8s.dshop.services.signalr:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         env:
@@ -1261,35 +1261,35 @@ spec:
 
 ## LOAD BALANCERS
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: apiservice-external
-  namespace: dshop
-spec:
-  type: LoadBalancer
-  selector:
-    app: apiservice
-  ports:
-  - name: http
-    port: 5000
-    targetPort: 5000
----
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: apiservice-external
+#  namespace: dshop
+#spec:
+#  type: LoadBalancer
+#  selector:
+#    app: apiservice
+#  ports:
+#  - name: http
+#    port: 5000
+#    targetPort: 5000
+#---
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: identityservice-external
-  namespace: dshop
-spec:
-  type: LoadBalancer
-  selector:
-    app: identityservice
-  ports:
-  - name: http
-    port: 5002
-    targetPort: 5000
----
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: identityservice-external
+#  namespace: dshop
+#spec:
+#  type: LoadBalancer
+#  selector:
+#    app: identityservice
+#  ports:
+#  - name: http
+#    port: 5002
+#    targetPort: 5000
+#---
 
 ## INGRESS (using the helm deployed nginx-ingress chart)
 
@@ -1303,27 +1303,26 @@ spec:
 # KUBE_EDITOR="nano" kubectl edit -n ingress pod/nginx-ingress-microk8s-controller-6x696
 
 # deploy the ingress resource
-# This works but I am not an nginx guy so not sure why, need to figure this out at some point
-
-#apiVersion: extensions/v1beta1
-#kind: Ingress
-#metadata:
-#  name: dshop-ingress
-#  namespace: dshop
-#  annotations:
-#    kubernetes.io/ingress.class: nginx
-#    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
-#    nginx.ingress.kubernetes.io/rewrite-target: /$2
-#spec:
-#  rules:
-#  - http:
-#      paths:
-#      - path: /api(/|$)(.*)
-#        backend:
-#          serviceName: apiservice
-#          servicePort: 5000
-#      - path: /identity(/|$)(.*)
-#        backend:
-#          serviceName: identityservice
-#          servicePort: 5002
-#---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: dshop-ingress
+  namespace: dshop
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
+spec:
+  rules:
+  - host: api.mwg.com
+    http:
+      paths:
+      - backend:
+          serviceName: apiservice
+          servicePort: 5000
+  - host: identity.mwg.com
+    http:
+      paths:
+      - backend:
+          serviceName: identityservice
+          servicePort: 5002          
+---
