--- a/DNC-DShop/k8s/kubernetes-manifest.yaml
+++ b/DNC-DShop/k8s/kubernetes-manifest.yaml
@@ -1278,9 +1278,9 @@ spec:
 ---
 
 ##*****************************************************************************
-##*****************************************************************************
 ##******************************** ACCESS *************************************
 ##*****************************************************************************
+##***** USE EITHER THE K8S LOAD BALANCERS OR K8S INGRESS OR ISTIO GATEWAY *****
 ##*****************************************************************************
 
 ## LOAD BALANCERS
