Fixed the dshop namespace

--- a/DNC-DShop/k8s/kubernetes-manifest.yaml
+++ b/DNC-DShop/k8s/kubernetes-manifest.yaml
@@ -48,7 +48,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: dshop
-
+  labels:
+    istio-injection: enabled
+---
 ##*****************************************************************************
 ##*****************************************************************************
 ##*************************** INFRASTRUCTURE **********************************
